--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <ul>
-      <li><a href="./labs/a1/index.html">lab 1 </a></li>
+      <li><a href="./labs/a1/index.html">Lab 1</a></li>
+      <li><a href="./labs/a2/index.html">Lab 2</a></li>
 
-      <li><a href="./kanbas/home.html">Kanbas </a></li>
+      <li><a href="./kanbas/home.html">Kanbas</a></li>
     </ul>
   </body>
 </html>
