--- a/public/kanbas/dashboard.html
+++ b/public/kanbas/dashboard.html
@@ -10,63 +10,46 @@
   </head>
   <body style="padding: 0%; margin: 0%">
     <div class="wd-sidebar-container">
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a
-            href="./profile/index.html"
-            style="color: white"
-          >
-            <i class="fa fa-smile"></i>
-            Account</a
-          >
+      <div class="wd-dimension-square text-center pt-3">
+        <i class="fa fa-user fa-lg"></i>
+        <div>
+          <a href="profile/index.html" style="color: white">Account</a>
         </div>
       </div>
-      <div class="wd-dimension-square-active">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a
-            href="./profile/index.html"
-            style="color: red"
-          >
-            Dashboard</a
-          >
+
+      <div class="wd-dimension-square-active text-center pt-3">
+        <i class="fas fa-tachometer-alt fa-lg"></i>
+        <div>
+          <a href="profile/index.html">Dashboard</a>
         </div>
       </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a href="./home.html" style="color: white">
-            Courses</a
-          >
-        </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <div><i class="fa fa-book fa-lg" aria-hidden="true"></i></div>
+        <div>Courses</div>
       </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a style="color: white"> Calendar</a>
-        </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <div><i class="fa fa-calendar fa-lg"></i></div>
+        <div>Calendar</div>
       </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a style="color: white"> Inbox</a>
-        </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <div><i class="fa fa-inbox fa-lg"></i></div>
+        <div>Inbox</div>
       </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a style="color: white"> History</a>
-        </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <div><i class="fa fa-history fa-lg"></i></div>
+        <div>History</div>
       </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a style="color: white"> Studio</a>
-        </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <div><i class="fa fa-tv fa-lg"></i></div>
+        <div>Studio</div>
       </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a style="color: white"> Commons</a>
-        </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <div><i class="fa fa-file-export fa-lg"></i></div>
+        <div>Commons</div>
       </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a style="color: white"> Help</a>
-        </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <div><i class="fa fa-question-circle fa-lg"></i></div>
+        <div>Help</div>
       </div>
     </div>
 
@@ -74,69 +57,84 @@
       <h2>Dashboard</h2>
       <hr />
       <h4>Published Courses (7)</h4>
+      <hr />
       <div class="d-flex flex-wrap flex-row">
-        <div class="col-lg-3 col-md-4 col-sm-12">
-          <div class="card wd-margin-all-around" style="width: 250px">
-            <div class="colored-square"></div>
-            <div class="card-body">
-              <h6 class="card-title">CS 4550 Web Development</h6>
-              <p class="card-text">CS 4550.17387</p>
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+          <a href="./home.html" style="color: blue">
+            <div class="card wd-margin-all-around" style="width: 250px">
+              <div class="colored-square"></div>
+              <div class="card-body">
+                <h6 class="card-title">CS 4550 Web Development</h6>
+                <p class="card-text">CS 4550.17387</p>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-12">
-          <div class="card wd-margin-all-around" style="width: 250px">
-            <div class="colored-square"></div>
-            <div class="card-body">
-              <h6 class="card-title">CS 4550 Web Development</h6>
-              <p class="card-text">CS 4550.17387</p>
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+          <a href="./home.html" style="color: blue">
+            <div class="card wd-margin-all-around" style="width: 250px">
+              <div class="colored-square"></div>
+              <div class="card-body">
+                <h6 class="card-title">CS 4550 Web Development</h6>
+                <p class="card-text">CS 4550.17387</p>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-12">
-          <div class="card wd-margin-all-around" style="width: 250px">
-            <div class="colored-square"></div>
-            <div class="card-body">
-              <h6 class="card-title">CS 4550 Web Development</h6>
-              <p class="card-text">CS 4550.17387</p>
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+          <a href="./home.html" style="color: blue">
+            <div class="card wd-margin-all-around" style="width: 250px">
+              <div class="colored-square"></div>
+              <div class="card-body">
+                <h6 class="card-title">CS 4550 Web Development</h6>
+                <p class="card-text">CS 4550.17387</p>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-12">
-          <div class="card wd-margin-all-around" style="width: 250px">
-            <div class="colored-square"></div>
-            <div class="card-body">
-              <h6 class="card-title">CS 4550 Web Development</h6>
-              <p class="card-text">CS 4550.17387</p>
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+          <a href="./home.html" style="color: blue">
+            <div class="card wd-margin-all-around" style="width: 250px">
+              <div class="colored-square"></div>
+              <div class="card-body">
+                <h6 class="card-title">CS 4550 Web Development</h6>
+                <p class="card-text">CS 4550.17387</p>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-12">
-          <div class="card wd-margin-all-around" style="width: 250px">
-            <div class="colored-square"></div>
-            <div class="card-body">
-              <h6 class="card-title">CS 4550 Web Development</h6>
-              <p class="card-text">CS 4550.17387</p>
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+          <a href="./home.html" style="color: blue">
+            <div class="card wd-margin-all-around" style="width: 250px">
+              <div class="colored-square"></div>
+              <div class="card-body">
+                <h6 class="card-title">CS 4550 Web Development</h6>
+                <p class="card-text">CS 4550.17387</p>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-12">
-          <div class="card wd-margin-all-around" style="width: 250px">
-            <div class="colored-square"></div>
-            <div class="card-body">
-              <h6 class="card-title">CS 4550 Web Development</h6>
-              <p class="card-text">CS 4550.17387</p>
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+          <a href="./home.html" style="color: blue">
+            <div class="card wd-margin-all-around" style="width: 250px">
+              <div class="colored-square"></div>
+              <div class="card-body">
+                <h6 class="card-title">CS 4550 Web Development</h6>
+                <p class="card-text">CS 4550.17387</p>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-12">
-          <div class="card wd-margin-all-around" style="width: 250px">
-            <div class="colored-square"></div>
-            <div class="card-body">
-              <h6 class="card-title">CS 4550 Web Development</h6>
-              <p class="card-text">CS 4550.17387</p>
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+          <a href="./home.html" style="color: blue">
+            <div class="card wd-margin-all-around" style="width: 250px">
+              <div class="colored-square"></div>
+              <div class="card-body">
+                <h6 class="card-title">CS 4550 Web Development</h6>
+                <p class="card-text">CS 4550.17387</p>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </div>
