--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -16,63 +16,43 @@
   </head>
   <body>
     <div class="wd-sidebar-container">
-      <div class="wd-dimension-square-active">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a
-            href="./profile/index.html"
-            style="color: red"
-          >
-            <i class="fa fa-smile"></i>
-            Account</a
-          >
+      <div class="wd-dimension-square-active text-center pt-3">
+        <div><i class="fa fa-user fa-lg"></i></div>
+        <div>Account</div>
+      </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <i class="fas fa-tachometer-alt fa-lg"></i>
+        <div>
+          <a href="profile/index.html" style="color: white">Dashboard</a>
         </div>
       </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a
-            href="./profile/index.html"
-            style="color: white"
-          >
-            Dashboard</a
-          >
-        </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <div><i class="fa fa-book fa-lg" aria-hidden="true"></i></div>
+        <div>Courses</div>
       </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a href="./home.html" style="color: white">
-            Courses</a
-          >
-        </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <div><i class="fa fa-calendar fa-lg"></i></div>
+        <div>Calendar</div>
       </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a style="color: white"> Calendar</a>
-        </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <div><i class="fa fa-inbox fa-lg"></i></div>
+        <div>Inbox</div>
       </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a style="color: white"> Inbox</a>
-        </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <div><i class="fa fa-history fa-lg"></i></div>
+        <div>History</div>
       </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a style="color: white"> History</a>
-        </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <div><i class="fa fa-tv fa-lg"></i></div>
+        <div>Studio</div>
       </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a style="color: white"> Studio</a>
-        </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <div><i class="fa fa-file-export fa-lg"></i></div>
+        <div>Commons</div>
       </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a style="color: white"> Commons</a>
-        </div>
-      </div>
-      <div class="wd-dimension-square">
-        <div style="width: 50%; height: 50%">
-          <i class="fa"></i><br /><a style="color: white"> Help</a>
-        </div>
+      <div class="wd-dimension-square text-center pt-3">
+        <div><i class="fa fa-question-circle fa-lg"></i></div>
+        <div>Help</div>
       </div>
     </div>
     <div class="row" style="margin-left: 8%; padding-top: 5%">
