--- a/public/kanbas/assignments/index.html
+++ b/public/kanbas/assignments/index.html
@@ -25,7 +25,7 @@
     <div class="wd-sidebar-container">
       <div class="wd-dimension-square text-center pt-3">
         <div><i class="fa fa-user fa-lg"></i></div>
-        <div>Account</div>
+        <a href="../profile/index.html" style="color: white">Account</a>
       </div>
       <div class="wd-dimension-square text-center pt-3">
         <i class="fas fa-tachometer-alt fa-lg"></i>
@@ -35,7 +35,7 @@
       </div>
       <div class="wd-dimension-square-active text-center pt-3">
         <div><i class="fa fa-book fa-lg" aria-hidden="true"></i></div>
-        <div>Courses</div>
+        <a href="../home.html"><div>Courses</div></a>
       </div>
       <div class="wd-dimension-square text-center pt-3">
         <div><i class="fa fa-calendar fa-lg"></i></div>
