--- a/public/kanbas/dashboard.html
+++ b/public/kanbas/dashboard.html
@@ -20,12 +20,12 @@
       <div class="wd-dimension-square-active text-center pt-3">
         <i class="fas fa-tachometer-alt fa-lg"></i>
         <div>
-          <a href="profile/index.html">Dashboard</a>
+          <a>Dashboard</a>
         </div>
       </div>
       <div class="wd-dimension-square text-center pt-3">
         <div><i class="fa fa-book fa-lg" aria-hidden="true"></i></div>
-        <div>Courses</div>
+        <a href="./home.html" style="color: white"><div>Courses</div></a>
       </div>
       <div class="wd-dimension-square text-center pt-3">
         <div><i class="fa fa-calendar fa-lg"></i></div>
