--- a/public/kanbas/home.html
+++ b/public/kanbas/home.html
@@ -22,12 +22,12 @@
     <div class="wd-sidebar-container">
       <div class="wd-dimension-square text-center pt-3">
         <div><i class="fa fa-user fa-lg"></i></div>
-        <div>Account</div>
+        <a href="./profile/index.html" style="color: white">Account</a>
       </div>
       <div class="wd-dimension-square text-center pt-3">
         <i class="fas fa-tachometer-alt fa-lg"></i>
         <div>
-          <a href="profile/index.html" style="color: white">Dashboard</a>
+          <a href="./dashboard.html" style="color: white">Dashboard</a>
         </div>
       </div>
       <div class="wd-dimension-square-active text-center pt-3">
