--- a/public/kanbas/profile/index.html
+++ b/public/kanbas/profile/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="wd-dimension-square text-center pt-3">
         <div><i class="fa fa-book fa-lg" aria-hidden="true"></i></div>
-        <div>Courses</div>
+        <a href="../home.html" style="color: white"><div>Courses</div></a>
       </div>
       <div class="wd-dimension-square text-center pt-3">
         <div><i class="fa fa-calendar fa-lg"></i></div>
